# vq

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  build.rs  codecov.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  lints.yml  publish.yml  publish_py.yml  tests.yml
api-reference/: index.html
api/distance/: index.html
api/errors/: index.html
api/quantizer/: index.html
docs/: api-reference.md  examples.md  getting-started.md  index.md
docs/api/: distance.md  errors.md  quantizer.md
docs/examples/: basic.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: bq.md  distance.md  pq.md  sq.md  tsvq.md
examples/: index.html
examples/basic/: index.html
getting-started/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/bq/: index.html
guide/distance/: index.html
guide/pq/: index.html
guide/sq/: index.html
guide/tsvq/: index.html
python/: 404.html  index.html  sitemap.xml
python/api-reference/: index.html
python/api/bq/: index.html
python/api/distance/: index.html
python/api/pq/: index.html
python/api/sq/: index.html
python/api/tsvq/: index.html
python/examples/: index.html
python/examples/basic/: index.html
python/getting-started/: index.html
python/getting-started/concepts/: index.html
python/getting-started/installation/: index.html
python/getting-started/quickstart/: index.html
python/search/: search_index.json
pyvq/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml  pyvq.pyi
pyvq/docs/: api-reference.md  examples.md  getting-started.md  index.md
pyvq/docs/api/: bq.md  distance.md  pq.md  sq.md  tsvq.md
pyvq/docs/examples/: basic.md
pyvq/docs/getting-started/: concepts.md  installation.md  quickstart.md
pyvq/scripts/: image_quantization_demo.py
pyvq/src/: bq.rs  distance.rs  lib.rs  pq.rs  sq.rs  tsvq.rs
pyvq/tests/: test_bq.py  test_distance.py  test_doc_examples.py  test_integration.py  test_pq.py  test_properties.py  test_regressions.py  test_sq.py  test_tsvq.py
search/: search_index.json
src/: bq.rs  distance.rs  exceptions.rs  lib.rs  pq.rs  sq.rs  traits.rs  tsvq.rs  vector.rs
src/algorithms/: bq.rs  mod.rs  pq.rs  sq.rs  tsvq.rs
src/core/: distance.rs  error.rs  hsdlib_ffi.rs  mod.rs  quantizer.rs  vector.rs
tests/: common.rs  doc_examples.rs  integration.rs  integration_tests.rs  property_tests.rs  regression_tests.rs  test_bq.rs  test_distances.rs  test_pq.rs  test_sq.rs  test_tsvq.rs  test_vector.rs
