[package]
name = "vq"
version = "0.2.1"
description = "A vector quantization library for Rust"
repository = "https://github.com/CogitatorTech/vq"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vector-quantization", "quantization", "nearest-neighbor", "data-compression", "embeddings"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/CogitatorTech/vq"
documentation = "https://docs.rs/vq"
categories = ["algorithms", "compression", "data-structures"]
edition = "2024"
rust-version = "1.85"

resolver = "2"

include = [
    "src/*",
    "build.rs",
    "external/hsdlib/include/*",
    "external/hsdlib/src/**/*.c",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE"
]

[lib]
name = "vq"
path = "src/lib.rs"

[features]
default = []
binaries = []
parallel = ["rayon"]
simd = []
all = ["binaries", "parallel", "simd"]

[dependencies]
rand = "0.9.0"
half = "2.4.1"
anyhow = "1.0.95"
rand_distr = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.29", features = ["derive"] }
thiserror = "2"
rayon = { version = "1.10", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1.5"

[profile.release]
strip = "symbols"
codegen-units = 1
opt-level = 3
lto = true
panic = "unwind"

[profile.bench]
debug = true

[profile.test]
debug = true

[package.metadata.rustfmt]
max_width = 100
hard_tabs = false
tab_spaces = 4
