[package]
name = "pyvq"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "pyvq"
crate-type = ["cdylib"]
doc = false

[dependencies]
vq = { path = "..", features = ["simd", "parallel"] }
pyo3 = { version = "=0.24.1", features = ["abi3-py310", "extension-module", "auto-initialize"] }
numpy = { version = "=0.24", features = ["half"] }
half = "2.4"
